# instapet

./: README.md  USER_GUIDE.md  docker-compose.yml  makefile
.devcontainer/: devcontainer-lock.json  devcontainer.json
backend/: .env.example  .gitignore  Dockerfile  database.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/database/: database.py  seed.py
backend/app/models/: __init__.py  comment.py  follow.py  like.py  post.py  tag.py  user.py
backend/app/routers/: auth.py  notifications.py  posts.py  users.py
backend/app/schemas/: auth.py  comment.py  post.py  user.py
backend/auth/: dependencies.py
backend/models/: save.py  user.py
backend/routers/: auth.py  posts.py  users.py
frontend/: index.html  nginx.conf  style.css
frontend/pages/: feed.html  login.html  post.html  profile.html  register.html  search.html  terms.html
frontend/services/: api.js  auth.js  notifications.js  posts.js  users.js
frontend/webcomponent/: main.js  navbar.js  postcard.js  usercard.js
frontend/webcomponent/css/: variables.css
frontend/webcomponent/layout/: footer.css  footer.js  navbar.css  navbar.js
frontend/webcomponent/login/: login-form.css  login-form.js
frontend/webcomponent/post/: comment-form.css
frontend/webcomponent/profile/: profile-edit-modal.css  profile-edit-modal.js  profile-grid.css  profile-grid.js  profile-header.css  profile-header.js  profile-users-modal.css  profile-users-modal.js
frontend/webcomponent/register/: register-form.css  register-form.js
(+29 files in other folders)
