[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.41",
]
