[project]
name = "backend"
version = "0.1.0"
description = "Backend FastAPI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.21",

    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "ty>=0.0.48",
]
